--- a/packages.config
+++ b/packages.config
@@ -1,5 +1,7 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
+  <package id="Microsoft.Bcl.AsyncInterfaces" version="8.0.0" targetFramework="net48" />
+  <package id="Microsoft.Extensions.DependencyInjection.Abstractions" version="8.0.1" targetFramework="net48" />
   <package id="Microsoft.Win32.Registry" version="4.7.0" targetFramework="net48" />
   <package id="NAudio" version="2.0.1" targetFramework="net48" />
   <package id="NAudio.Asio" version="2.0.0" targetFramework="net48" />
@@ -8,7 +10,12 @@
   <package id="NAudio.Wasapi" version="2.0.0" targetFramework="net48" />
   <package id="NAudio.WinForms" version="2.0.1" targetFramework="net48" />
   <package id="NAudio.WinMM" version="2.0.1" targetFramework="net48" />
+  <package id="Prism.Container.Abstractions" version="9.0.106" targetFramework="net48" />
+  <package id="Prism.Core" version="9.0.537" targetFramework="net48" />
+  <package id="Prism.Events" version="9.0.537" targetFramework="net48" />
+  <package id="System.Runtime.CompilerServices.Unsafe" version="4.5.3" targetFramework="net48" />
   <package id="System.Security.AccessControl" version="4.7.0" targetFramework="net48" />
   <package id="System.Security.Principal.Windows" version="4.7.0" targetFramework="net48" />
+  <package id="System.Threading.Tasks.Extensions" version="4.5.4" targetFramework="net48" />
   <package id="taglib-sharp-netstandard2.0" version="2.1.0" targetFramework="net48" />
 </packages>
