Added multimedia key support Start reintroducing server stuff

--- a/Krusefy.csproj
+++ b/Krusefy.csproj
@@ -256,5 +256,14 @@
   <ItemGroup>
     <Resource Include="images\volume.png" />
   </ItemGroup>
+  <ItemGroup />
+  <ItemGroup>
+    <Content Include="server\404.html">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Content>
+    <Content Include="server\index.html">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Content>
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
